# opengnb

./: .gitattributes  .gitignore  Linux_quick_start.txt  Makefile  Makefile.Darwin  Makefile.am  Makefile.bak  Makefile.debian  Makefile.debian.inc  Makefile.freebsd  Makefile.inc  Makefile.linux  Makefile.mingw_x86_64  Makefile.openbsd  Makefile.openwrt  Makefile.openwrt.inc  README.md  README_CN.md  README_EN.md  README_RU.md  configure.ac  gnb_initkey_linux_x86_64.sh  gnb_quick_setup.cmd  install_win_if_drv.bat  makefile.freebsd  makefile.linux  makefile.openwrt  opengnb.spec  readme_first.txt  version
.github/workflows/: release.yml
conf_tpl/1001/: node.conf
conf_tpl/1002/: address.conf  node.conf  route.conf
conf_tpl/1002/script/: if_up_linux.sh
conf_tpl/1003/: address.conf  node.conf
docs/: GNB_Linux_部署说明.txt  disclaimer.md  disclaimer_cn.md  gnb_config_manual_cn.md  gnb_diagnose.md  gnb_diagnose_cn.md  gnb_for_linux_manual.md  gnb_setup.md  gnb_user_manual_cn.md  gnb_user_manual_en.md  gnb_user_manual_ru.md
examples/node_config_example/: address.conf  node.conf
if_drv/tap-windows/: addtap.bat  deltapall.bat
libs/: Makefile.am  README.md
libs/ed25519/: Makefile.am
libs/hash/: murmurhash.c
libs/libnatpmp/: Makefile.am  declspec.h  natpmp.c
libs/miniupnpc/: Makefile  Makefile.am  Makefile.mingw  addr_is_reserved.c  listdevices.c  minihttptestserver.c  minisoap.c  minissdpc.c  miniupnpc.c  miniupnpc.h  miniupnpcstrings.h  miniupnpctypes.h  miniwget.c  receivedata.c  setup.py  setupmingw32.py  testminiwget.sh  testupnpigd.py  upnpc.c  upnpdev.h
libs/protocol/: network_protocol.h
libs/tap-windows/: tap-windows.h
man/: gnb.8  gnb_crypto.1  gnb_ctl.8  gnb_es.8
scripts/: opengnb@.service
sh/: dig_wan6.sh  gnb_freebsd_amd64.sh  gnb_linux_x86_64.sh  gnb_macOS.sh  gnb_openbsd_amd64.sh  gnb_openwrt_15.05.1.mt7688.sh  gnb_openwrt_1900acs.sh  gnb_openwrt_ar71xx-generic.sh  gnb_openwrt_ar71xx-nand.sh  gnb_openwrt_mt76x8.sh  gnb_openwrt_x86_64.sh  gnb_raspberrypi_ARMv7.sh  gnb_windows.cmd  gnb_windows_stop.cmd
src/: Makefile.am  gnb.h  gnb_address.c  gnb_address.h  gnb_address_type.h  gnb_alloc.c  gnb_alloc.h  gnb_arg_list.c  gnb_arg_list.h  gnb_argv.c  gnb_binary.c  gnb_binary.h  gnb_block.h  gnb_conf.c  gnb_conf_file.c  gnb_conf_file.h  gnb_conf_type.h  gnb_config_lite.c  gnb_config_lite.h  gnb_core.c  gnb_core.h  gnb_core_frame_type_defs.h  gnb_crypto.c  gnb_ctl_block.c  gnb_ctl_block.h  gnb_ctl_block_set.c  gnb_daemon.c  gnb_detect_worker.c  gnb_dir.c  gnb_dir.h  gnb_discover_in_lan_frame_type.h  gnb_doubly_linked_list.c  gnb_doubly_linked_list.h  gnb_exec.h  gnb_fixed_pool.c  gnb_fixed_pool.h  gnb_fwdu2_frame_type.h  gnb_hash32.c  gnb_hash32.h  gnb_index_frame_type.h  (+52 more)
src/Darwin/: gnb_drv_darwin.c
src/cli/: gnb.c  gnb_crypto.c  gnb_ctl.c  gnb_es.c
src/crypto/: Makefile.am
src/crypto/arc4/: arc4.c  arc4.h
src/crypto/random/: gnb_random.c  gnb_random.h
src/crypto/xor/: xor.c  xor.h
src/ctl/: gnb_ctl_dump.c
src/es/: gnb_discover_in_lan.c  gnb_environment_service.c  gnb_es_broadcast_address.c  gnb_es_dump.c  gnb_es_platform.c  gnb_es_resolv.c  gnb_es_type.h  gnb_es_upnp.c
src/freebsd/: gnb_drv_freebsd.c
src/linux/: gnb_drv_linux.c
src/mingw/: gnb.exe.manifest  gnb_drv_win32.c  gnb_drv_wintun.c  windows_platform.c
src/openbsd/: gnb_drv_openbsd.c
src/packet_filter/: gnb_pf_crypto_arc4.c  gnb_pf_crypto_xor.c  gnb_pf_dump.c  gnb_pf_route.c  gnb_pf_zip.c
src/unix/: unix_platform.c
