noinst_LIBRARIES = libed25519.a

libed25519_a_SOURCES = \
		       add_scalar.c \
		       fe.c \
		       ge.c \
		       key_exchange.c \
		       keypair.c \
		       sc.c \
		       seed.c \
		       sha512.c \
		       sign.c \
		       verify.c

noinst_HEADERS = \
		 ed25519.h \
		 fe.h \
		 fixedint.h \
		 ge.h \
		 precomp_data.h \
		 sc.h \
		 sha512.h

EXTRA_DIST = license.txt
